<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textItemCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="20dp"
                android:text="@string/categoria"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textItemDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="20dp"
                android:text="@string/descricao"
                android:textColor="@color/cinza_escuro" />
        </LinearLayout>

        <TextView
            android:id="@+id/textItemValor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/valor"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>