<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/telaCadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CadastrarActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/intro_cadastro_texto01"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextCadastroNome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextCadastroNome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@drawable/ic_person_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/campo_nome"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHighlight="@color/vermelho_200"
        android:textColorLink="@color/vermelho_200"
        app:layout_constraintBottom_toTopOf="@+id/editTextCadastroEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editTextCadastroEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@drawable/ic_email_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/campo_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHighlight="@color/vermelho_200"
        android:textColorLink="@color/vermelho_200"
        app:layout_constraintBottom_toTopOf="@+id/editTextCadastroSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCadastroNome" />

    <EditText
        android:id="@+id/editTextCadastroSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/campo_senha"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHighlight="@color/vermelho_200"
        android:textColorLink="@color/vermelho_200"
        app:layout_constraintBottom_toTopOf="@+id/buttonCadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCadastroEmail" />

    <Button
        android:id="@+id/buttonCadastrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/botao_cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCadastroSenha" />

</androidx.constraintlayout.widget.ConstraintLayout>