<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DespesaActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@color/cor_despesa"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextValorDespesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparente"
            android:ems="10"
            android:hint="@string/valorReceita"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextCategoriaDespesa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/categoriaReceita"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextDescricaoDespesa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDataDespesa" />

    <EditText
        android:id="@+id/editTextDataDespesa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/dataReceita"
        android:inputType="date"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/editTextCategoriaDespesa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.14999998"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextDescricaoDespesa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/descricaoReceita"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCategoriaDespesa" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSalvarDespesa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        app:backgroundTint="@color/cor_despesa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_check_24" />

</androidx.constraintlayout.widget.ConstraintLayout>